--- a/Public/index.html
+++ b/Public/index.html
@@ -1,4 +1,3 @@
-<!-- /public/index.html -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
     <div class="fundo">    
@@ -15,20 +15,50 @@
             <div class="content first-content">
                 <div class="first-column">
                     <h2 class="title title-primary">Bem Vindo!</h2>
-                    <p class="description description-primary">Painel Gerencial Logística - TDC</p>
-                    <p class="description description-primary">Escolha uma opção abaixo:</p>
+                    <p class="description description-primary">Painel Gerencial Logistica - TDC</p>
+                    <p class="description description-primary">Faça o Login para Acessar os Paineis</p>
                 </div>
                 <div class="second-column">
-                    <h2 class="title title-second">Menu de Navegação</h2>
-                    <div class="button-group">
-                        <button class="btn btn-second">CARREGOS TDC</button>
-                        <button class="btn btn-second">GESTÃO DE FRETE</button>
-                        <button class="btn btn-second">ENTRADA E SAÍDA</button>
-                    </div>
-                </div>
-            </div>
-        </div>    
+                    <h2 class="title title-second">Painel Gerencial Logistica - TDC</h2>
+                    <div class="social-media">
+                        <ul class="list-social-media">
+                            <a class="link-social-media" href="#">
+                                <li class="item-social-media">
+                                    <i class="fab fa-facebook-f"></i>
+                                </li>
+                            </a>
+                            <a class="link-social-media" href="#">
+                                <li class="item-social-media">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </li>
+                            </a>
+                            <a class="link-social-media" href="#">
+                                <li class="item-social-media">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </li>
+                            </a>
+                        </ul>
+                    </div><!-- social media -->
+                    <p class="description description-second">Informe seu e-mail e senha para acessar.</p>
+                    <form class="form" id="login-form" onsubmit="return validarLogin(event)">
+                        <label class="label-input" for="email">
+                            <i class="far fa-envelope icon-modify"></i>
+                            <input type="email" id="email" placeholder="Email" required>
+                        </label>
+                    
+                        <label class="label-input" for="password">
+                            <i class="fas fa-lock icon-modify"></i>
+                            <input type="password" id="password" placeholder="Password" required>
+                        </label>
+                    
+                        <a class="password" href="#">Esqueceu a Senha?</a>
+                        <button class="btn btn-second" type="submit">Acessar</button>
+                    </form>
+                </div><!-- second column -->
+            </div><!-- second-content -->
+        </div>
     </div>    
-    <script src="/js/login-validation.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/login-validation.js"></script> <!-- Script JavaScript externo -->
 </body>
 </html>
