--- a/Public/menu.html
+++ b/Public/menu.html
@@ -1,13 +1,13 @@
+<!-- /public/index.html -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Menu</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" 
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 <body>
     <div class="fundo">    
@@ -15,20 +15,20 @@
             <div class="content first-content">
                 <div class="first-column">
                     <h2 class="title title-primary">Bem Vindo!</h2>
-                    <p class="description description-primary">Painel Gerencial Logistica - TDC</p>
+                    <p class="description description-primary">Painel Gerencial Logística - TDC</p>
                     <p class="description description-primary">Escolha uma opção abaixo:</p>
                 </div>
                 <div class="second-column">
                     <h2 class="title title-second">Menu de Navegação</h2>
                     <div class="button-group">
                         <button class="btn btn-second">CARREGOS TDC</button>
-                        <button class="btn btn-second">GESTAO DE FRETE</button>
-                        <button class="btn btn-second">ENTRADA E SAIDA</button>
-                        <!--<button class="btn btn-second"></button>-->
+                        <button class="btn btn-second">GESTÃO DE FRETE</button>
+                        <button class="btn btn-second">ENTRADA E SAÍDA</button>
                     </div>
-                </div><!-- second column -->
-            </div><!-- first-content -->
-        </div>
-    </div>
+                </div>
+            </div>
+        </div>    
+    </div>    
+    <script src="/js/login-validation.js"></script>
 </body>
 </html>
