--- a/Public/index.html
+++ b/Public/index.html
@@ -58,6 +58,6 @@
             </div><!-- second-content -->
         </div>
     </div>    
-    <script src="js/login-validation.js"></script> <!-- Script JavaScript externo -->
+    <script src="/js/login-validation.js"></script> <!-- Script JavaScript externo -->
 </body>
 </html>
